fixed a bug in the template

--- a/ckanext/csvtocsvw/templates/csvtocsvw/csv_annotate.html
+++ b/ckanext/csvtocsvw/templates/csvtocsvw/csv_annotate.html
@@ -70,7 +70,7 @@
       </colgroup>
       <tr>
         <th>{{ _('Status') }}</th>
-        <td>{{ h.csvwmapandtransform__status_description(status) }}</td>
+        <td>{{status.status}}</td>
       </tr>
       <tr>
         <th>{{ _('Last updated') }}</th>
