--- a/ckanext/csvtocsvw/templates/package/snippets/resource_item.html
+++ b/ckanext/csvtocsvw/templates/package/snippets/resource_item.html
@@ -4,6 +4,7 @@
 {{ super() }}
 {% if not url_is_edit and h.csvtocsvw_show_tools(res) %}
 {% if res.url and h.is_url(res.url) %}
+{% if h.check_access('csvtocsvw_annotate',res) %}
 <li>
   <a href="{{ url }}/csv_annotate" class="dropdown-item" target="_blank"
     rel="noreferrer">
@@ -11,6 +12,8 @@
     {{ _('Annotate') }}
   </a>
 </li>
+{% endif %}
+{% if h.check_access('csvtocsvw_transform',res) %}
 <li>
   <a href="{{ url }}/csv_transform" class="dropdown-item" target="_blank"
     rel="noreferrer">
@@ -18,6 +21,7 @@
     {{ _('Transform') }}
   </a>
 </li>
+{% endif %}
 {% endif %}
 {% endif %}
 {% endblock %}
