--- a/ckanext/csvtocsvw/templates/csvtocsvw/csv_transform.html
+++ b/ckanext/csvtocsvw/templates/csvtocsvw/csv_transform.html
@@ -33,7 +33,7 @@
     <div class="col-12 d-flex align-items-center justify-content-between">
       <div class="d-flex align-items-center">
         <button class="btn btn-primary {% if not
-          meta_res or service_status %}disabled{% endif %}" name="save" type="submit">
+          meta_res or not service_status %}disabled{% endif %}" name="save" type="submit">
           <i class="fa fa-play"></i> {{ _('Run Transformation') }}
         </button>
         <!-- Status Indicator Section -->
